[package]
name = "paycheck-utils"
version = "0.1.2"
authors = ["Samuel Diaz"]
edition = "2024"
description = "A library that contains utility functions for estimating paycheck withholdings and net income in order to compare against a given set of living expenses"
license = "MIT"

[[bin]]
name = "check-paycheck"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
